ref #24 despoluindo a interface e limitando o escopo, usando o menu na nav bar

--- a/escolar/core/templates/nav_gestor.html
+++ b/escolar/core/templates/nav_gestor.html
@@ -14,19 +14,24 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="{{ menu_home }}"><a href="/" title="{{ section.name }}"><i class="icon-home"></i>Home</a></li>
+          <!-- <li class="{{ menu_home }}"><a href="/" title="{{ section.name }}"><i class="icon-home"></i>Home</a></li> -->
           {% if user.is_authenticated %}
+            {% if escola %}
             <!-- {# dropdown ADM INI #} -->
             <li class="dropdown {{ menu_administracao }}">
-                <li><a href="{% url 'grupos_list' %}">Grupos</a></li>
-                <li><a href="{% url 'escolas_list' %}">Escolas</a></li>
+<!--                 <li class="{{ grupos }}"><a href="{% url 'grupos_list' %}">Grupos</a></li>
+                <li class="{{ escolas }}"><a href="{% url 'escolas_list' %}">Escolas</a></li> -->
+                <li class="{{ tab_escola }}"><a href="{% url 'escola_cadastro' escola.pk %}" id='id_escola'>Escola</a></li>
+                <!-- <li class="{{ tab_usuarios }}"><a href="{% url 'usuarios_list' escola.id %}" id='id_usuarios'>Usuários</a></li> -->
+                <li class="{{ tab_responsaveis }}"><a href="{% url 'responsaveis_list' escola.id %}">Responsáveis</a></li>
+                <li class="{{ tab_alunos }}"><a href="{% url 'alunos_list' escola.id %}" id='id_alunos'>Alunos</a></li>
+                <li class="{{ tab_autorizados }}"><a href="{% url 'autorizados_list' escola.id %}">Autorizados</a></li>
             </li>
-            <!-- {# dropdown ADM fim #} -->
-            <!-- {# dropdown Agendas INI #} -->
-
-          <!-- {# dropdown Agendas fim #} -->
-
-
+            {% else %}
+              <li class="dropdown {{ menu_administracao }}">
+                <li class="{{ escolas }}"><a href="{% url 'escolas_list' %}">Escolas</a></li>
+              </li>
+            {% endif %}
           {% endif %}
           <li class="{% if section.selected %}active{% endif %}"><a href="#"><i class="{{ section.icon }}"></i> {{ section.name }}</a></li>
         </ul>
