--- a/escolar/core/templates/base_aluno.html
+++ b/escolar/core/templates/base_aluno.html
@@ -3,9 +3,9 @@
     <li class="{{ tab_aluno }}"><a href="{% url 'aluno_form' escola.pk aluno.pk %}" id='id_escola'>Cadastro</a></li>
     <li class="{{ tab_responsaveis_aluno }}"><a href="{% url 'autorizados_aluno_list' escola.id aluno.id %}">Responsáveis</a></li>
     <li class="{{ tab_autorizados_aluno }}"><a href="{% url 'autorizados_aluno_list' escola.id aluno.id %}">Autorizados</a></li>
-    <li class="{{ tab_usuarios }}"><a href="#" id='id_usuarios'>Boletim</a></li>
+<!--     <li class="{{ tab_usuarios }}"><a href="#" id='id_usuarios'>Boletim</a></li>
     <li class="{{ tab_classes }}"><a href="#" id='id_classes'>Faltas</a></li>
-    <li class="{{ tab_professores }}"><a href="#" id='id_professores'>Agenda</a></li>
+    <li class="{{ tab_professores }}"><a href="#" id='id_professores'>Agenda</a></li> -->
     <li class="{{ tab_professores }}"><a href="#" id='id_professores'>Contrato</a></li>
  	<li class="{{ tab_professores }}"><a href="#" id='id_professores'>Parcelas</a></li>
     {% endif %}
