--- a/escolar/financeiro/templates/financeiro/responsaveis_list.html
+++ b/escolar/financeiro/templates/financeiro/responsaveis_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-
+{% load bootstrap3 %}
 {% block page_title %}
   <div class="page-header">
   <!-- TODO erver esse br -->
@@ -15,39 +15,49 @@
 {% block content %}
 
 <div class="container">
-
   {% include "base_adm.html" %}
   <div class="row-fluid span10">
-    <table class="table table-striped">
-        <thead>
-          <tr>
-              <th>Nome</th>
-              <th>Aluno</th>
-              <th>Data</th>
-          </tr>
-        </thead>
-        <tbody>
-        {% for contrato in object_list %}
-          <tr>
-            <td><a href="#">{{ contrato.responsavel.nome }}</a></td>
-            {% if can_edit or user.id == contrato.aluno.id %}
-              <td><a href="{% url 'aluno_form' escola.pk  contrato.aluno.pk %}">{{ contrato.aluno.nome }}</a></td>
-            {% else %}
-              <td>{{ contrato.aluno.nome }}</td>
-            {% endif %}
-            <td>{{ contrato.data_assinatura|date:'d/m/Y' }}</td>
-          </tr>
-        {% empty %}
-        <tr>
-          <td>
-              Nenhum responsável encontrado
-          </td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    {% include 'pagination.html' %}
+    <form class="form-inline well" method="GET" action="#">
+      <div class="form-group">
+        {% bootstrap_field form.responsavel %}
+        {% bootstrap_field form.aluno %}
+        {% bootstrap_field form.ano %}
+        {% bootstrap_field form.serie %}
+        {% bootstrap_field form.curso %}
+      </div>
+      <button type="submit" class="btn btn-primary" title="Filtrar"><i class="glyphicon glyphicon-search"></i></button>
+      <a class="btn btn-small btn-info" href="." title="Apagar o filtro e listar todos"><i class="glyphicon glyphicon-remove-circle"></i></a>
+    </form>
   </div>
+  <table class="table table-striped">
+      <thead>
+        <tr>
+            <th>Nome</th>
+            <th>Aluno</th>
+            <th>Data</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for contrato in object_list %}
+        <tr>
+          <td><a href="#">{{ contrato.responsavel.nome }}</a></td>
+          {% if can_edit or user.id == contrato.aluno.id %}
+            <td><a href="{% url 'aluno_form' escola.pk  contrato.aluno.pk %}">{{ contrato.aluno.nome }}</a></td>
+          {% else %}
+            <td>{{ contrato.aluno.nome }}</td>
+          {% endif %}
+          <td>{{ contrato.data_assinatura|date:'d/m/Y' }}</td>
+        </tr>
+      {% empty %}
+      <tr>
+        <td>
+            Nenhum responsável encontrado
+        </td>
+      </tr>
+      {% endfor %}
+      </tbody>
+  </table>
+  {% include 'pagination.html' %}
 </div>
 
 {% endblock content %}
