--- a/escolar/financeiro/templates/financeiro/responsaveis_list.html
+++ b/escolar/financeiro/templates/financeiro/responsaveis_list.html
@@ -1,5 +1,13 @@
 {% extends 'base.html'%}
 {% load bootstrap3 %}
+{% block css %}
+  <style type="text/css">
+    #id_serie, #id_ano {
+      width: 75px;
+      height: 35px;
+    }
+   </style>
+{% endblock css %}
 {% block page_title %}
   <div class="page-header">
   <!-- TODO erver esse br -->
