--- a/escolar/escolas/templates/escolas/escola_cadastro.html
+++ b/escolar/escolas/templates/escolas/escola_cadastro.html
@@ -2,11 +2,15 @@
 {% load bootstrap3 %}
 
 {% block page_title %}
+  <div class="page-header">
+  <!-- TODO erver esse br -->
+  <br>
     {% if escola %}
         Escola: {{ escola.nome }}
     {% else %}
         Cadastro de Escola
     {% endif %}
+  </div>
 {% endblock page_title %}
 
 
