ref #32 MIGRACAO Perfil, Endereco; listagem de perfil / escola

--- a/escolar/financeiro/templates/financeiro/contrato_cadastro.html
+++ b/escolar/financeiro/templates/financeiro/contrato_cadastro.html
@@ -24,6 +24,7 @@
         Série: <b>{{ contrato.serie }}</b><br> 
         Ano: <b>{{ contrato.ano }}</b><br>
         Valor do contrato: <b>R$ {{ contrato.valor }}</b><br>
+        contrato: <b>R$ {{ contrato.valor }}</b><br>
         Data de assinatura: <b>{{ contrato.data_assinatura|date:"d/m/Y" }}</b><br> 
         Número de parcelas: <b>{{ contrato.nr_parcela }}</b><br> 
         Desconto: <b>{{ contrato.desconto }} (%)</b><br>
