--- a/escolar/core/templates/core/perfis_list.html
+++ b/escolar/core/templates/core/perfis_list.html
@@ -32,7 +32,7 @@
       {% if can_edit %}
         <caption>
            <div style="float:right; margin-right:10px">
-              <a href="" class="btn btn-mini btn-success">Novo Perfil</a>
+              <a href="{% url 'perfil_form' escola.id %}" class="btn btn-mini btn-success">Novo Perfil</a>
            </div>
         </caption>
       {% endif %}
