--- a/escolar/core/templates/core/perfil_form.html
+++ b/escolar/core/templates/core/perfil_form.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
-
+{% block extra_css %}
+    {{ endereco_form.media.css }}
+{% endblock extra_css %}
 {% block page_title %}
   <div class="page-header">
   <!-- TODO erver esse br -->
   <br>
-    {% if escola %}
-        Perfis / Escola: {{ escola.nome }}
+    {% if perfil_form.instance.id %}
+        Perfil: {{ perfil_form.instance.nome }}
     {% else %}
-       Perfis
+       Perfil
     {% endif %}
   </div>
 {% endblock page_title %}
@@ -53,5 +55,5 @@
 </div>
 {% endblock content %}
 {% block extra_js %}
-  {{ form.media }}
+  {{ endereco_form.media }}
 {% endblock extra_js %}
