ref #32 melhorias no filtro de pagamentos

--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -27,10 +27,8 @@
     <form class="form-inline well" method="GET" >
       <div class="form-group">
         {% bootstrap_field form.ano %}
-        {% bootstrap_field form.responsavel %}
-        {% bootstrap_field form.aluno %}
-        {% bootstrap_field form.serie %}
-        {% bootstrap_field form.curso %}
+        {% bootstrap_field form.mes %}
+        {% bootstrap_field form.titulo %}
       </div>
       <button type="submit" class="btn btn-primary" title="Filtrar"><i class="glyphicon glyphicon-search"></i></button>
       <a class="btn btn-small btn-info" href="." title="Apagar o filtro e listar todos"><i class="glyphicon glyphicon-remove-circle"></i></a>
