ref #32 ajuste nas fixtures troca o pde julio por crescer

--- a/escolar/core/templates/nav_gestor.html
+++ b/escolar/core/templates/nav_gestor.html
@@ -22,7 +22,7 @@
                 <li class="{{ tab_grupos }}"><a href="{% url 'grupos_list' escola.id %}" id='id_grupos'>Grupos</a></li>
                 <li class="{{ tab_perfis }}"><a href="{% url 'perfis_list' escola.id %}" id='id_perfis'>Perfis</a></li>
                 <li class="{{ tab_usuarios }}"><a href="{% url 'usuarios_list' escola.id %}" id='id_usuarios'>Usuários</a></li>
-                <li class="{{ tab_escola }}"><a href="{% url 'escola_cadastro' escola.pk %}" id='id_escola'>Escola</a></li>
+                <li class="{{ tab_escola }}"><a href="{% url 'escola_cadastro' escola.pk %}" id='id_escola'>Instituição</a></li>
                 <li class="{{ tab_alunos }}"><a href="{% url 'alunos_list' escola.id %}" id='id_alunos'>Alunos</a></li>
                 <li class="{{ tab_contratos }}"><a href="{% url 'contratos_list' escola.id %}" id='contratos'>Contratos</a></li>
                 <li class="{{ tab_parcelas }}"><a href="{% url 'movimentos_list' escola.id %}" id='id_movimentos'>Parcelas</a></li>
