ref #32 django municipius funcionanndo

--- a/escolar/core/templates/core/perfil_form.html
+++ b/escolar/core/templates/core/perfil_form.html
@@ -19,6 +19,8 @@
 <div class="container">
   {% include "base_adm.html" %}
   <div class="row-fluid span10">
+    {% include "base_perfil.html" %}
+
     <form method="POST">
       {{ form.errors }}
       {% csrf_token %}
