--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -75,21 +75,19 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
     <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> --> 
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
 
     <script type="text/javascript">
         $(document).ready(function () {
             $('.dropdown-toggle').dropdown();
         });
     </script>
-
-
-
 
 
     {% block extra_js %} {% endblock extra_js%}
