--- a/escolar/escolas/templates/escolas/aluno_form.html
+++ b/escolar/escolas/templates/escolas/aluno_form.html
@@ -1,36 +1,68 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
-
+{% block extra_css %}
+    {{ endereco_form.media.css }}
+{% endblock extra_css %}
 {% block page_title %}
-  
+  <div class="page-header">
+  <!-- TODO erver esse br -->
   <br>
-    
+    {% if form.instance.id %}
+        Aluno: {{ form.instance.nome }}
+    {% else %}
+       Aluno
+    {% endif %}
+  </div>
 {% endblock page_title %}
-
 
 {% block content %}
 <div class="container">
   {% include "base_adm.html" %}
   <div class="row-fluid span10">
-
-  {% include "base_aluno.html" %}
-
-    Nome: {{ aluno.nome }}<br>
-    Email: {{ aluno.email }}<br>
-    Data de ingresso na Escola: {{ form.instance.date_joined|date:"d/m/Y" }}
-  <form method="POST" >
-    {% csrf_token %}
-    <div class="form-group">
-      <div class="row">
-        <!-- {# Celular, Tablet, Computador #} -->
-        <div class="col-xs-9 col-sm-6 col-md-3">
-          {% bootstrap_field form.ativo %}
+    {% include "base_aluno.html" %}
+    <form method="POST">
+      {{ form.errors }}
+      {% csrf_token %}
+      <div class="form-group center_div" enctype="multipart/form-data">
+        <div class="row">
+          <!-- {# Celular, Tablet, Computador #} -->
+          <div class="col-xs-9 col-sm-6 col-md-3">
+            {% bootstrap_field form.ano %}
+            {% bootstrap_field form.foto %}
+            {% bootstrap_field form.nome %}
+            {% bootstrap_field form.nascimento %}
+            {% bootstrap_field form.nacionalidade %}
+            <small>
+            Natural de:
+            </small>
+            {{ form.natural_municipio }}
+          </div>
+          <div class="col-xs-9 col-sm-6 col-md-3">
+            {% bootstrap_field form.email %}
+            {% bootstrap_field form.cpf %}
+            {% bootstrap_field form.rg %}
+            {% bootstrap_field form.observacao %}
+            {% bootstrap_field form.documento %}
+          </div>
+          <div class="col-xs-9 col-sm-6 col-md-3">
+            <small>Endereço do Aluno:</small>
+            {% bootstrap_field endereco_form.logradouro %}
+            {% bootstrap_field endereco_form.numero %}
+            {% bootstrap_field endereco_form.bairro %}
+          </div>
+          <div class="col-xs-9 col-sm-6 col-md-3">
+            {% bootstrap_field endereco_form.cep %}
+            {{ endereco_form.municipio }}
+          </div>
         </div>
       </div>
-      <input type="submit" value="Salvar" class="btn btn-primary">
-      <a href="{% url 'alunos_list' escola.id %}" class="btn btn-secondary">Cancelar</a>
-    </div>
-  </form>
+      <div class="form-actions">
+        <input type="submit" value="Salvar" class="btn btn-primary">
+        <a href="{% url 'alunos_list' escola.pk %}" class="btn btn-secondary">Cancelar</a>
+      </div>
+    </form>
+  </div>
+</div>
   {% if classes %}
   <h4>Histórico de classes:</h4>
   <ul>
