--- a/escolar/escolas/templates/escolas/alunos_list.html
+++ b/escolar/escolas/templates/escolas/alunos_list.html
@@ -26,8 +26,7 @@
   <div class="row-fluid span10">
     <form class="form-inline well" method="GET" >
       <div class="form-group">
-        {% bootstrap_field form.responsavel %}
-        {% bootstrap_field form.aluno %}
+        {% bootstrap_field form.nome %}
         {% bootstrap_field form.ano %}
         {% bootstrap_field form.serie %}
         {% bootstrap_field form.curso %}
@@ -37,25 +36,32 @@
     </form>
   </div>
     <table class="table table-striped">
+      {% if can_edit %}
+        <caption>
+           <div style="float:right; margin-right:10px">
+              <a href="{% url 'aluno_form' escola.id %}" class="btn btn-mini btn-success">Novo Aluno</a>
+           </div>
+        </caption>
+      {% endif %}
         <thead>
           <tr>
               <th>Nome</th>
-              <th>Série</th>
+              <th>Nascimento</th>
               <th>Curso</th>
               <th>Matrícula<br>data</th>
           </tr>
         </thead>
         <tbody>
-        {% for contrato in object_list %}
+        {% for aluno in object_list %}
           <tr>
-            {% if can_edit or user.id == contrato.aluno.id %}
-              <td><a href="{% url 'aluno_form' escola.pk  contrato.aluno.pk %}">{{ contrato.aluno.nome }}</a></td>
+            {% if can_edit or user.id == aluno.aluno.id %}
+              <td><a href="{% url 'aluno_form' escola.id aluno.id %}">{{ aluno.nome }}</a></td>
             {% else %}
-              <td>{{ contrato.aluno.nome }}</td>
+              <td>{{ aluno.nome }}</td>
             {% endif %}
-            <td>{{ contrato.serie|default:'--' }}</td>
-            <td>{{ contrato.curso|default:'--' }}</td>
-            <td>{{ contrato.data_assinatura|date:'d/m/Y' }}</td>
+            <td>{{ aluno.nascimento|date:"d/m/Y"|default:'--' }}</td>
+            <td>{{ aluno.curso|default:'--' }}</td>
+            <td>{{ aluno.data_assinatura|date:'d/m/Y' }}</td>
           </tr>
         {% empty %}
         <tr>
