--- a/escolar/escolas/templates/escolas/autorizados_do_aluno_list.html
+++ b/escolar/escolas/templates/escolas/autorizados_do_aluno_list.html
@@ -2,11 +2,15 @@
 {% load bootstrap3 %}
 
 {% block page_title %}
-    {% if escola %}
-        Cadastro de Alunos / Escola: {{ escola.nome }}
+  <div class="page-header">
+  <!-- TODO erver esse br -->
+  <br>
+    {% if aluno %}
+        Aluno: {{ aluno.nome }}
     {% else %}
-       Cadastro de Usuários
+       Aluno
     {% endif %}
+  </div>
 {% endblock page_title %}
 
 {% block content %}
