--- a/escolar/core/templates/base_aluno.html
+++ b/escolar/core/templates/base_aluno.html
@@ -2,7 +2,7 @@
   {% if escola.id %}
     {% if aluno.pk %}
       <li class="{{ tab_aluno }}"><a href="{% url 'aluno_form' escola.pk aluno.pk %}" id='id_escola'>Ficha de Matrícula</a></li>
-          <li class="{{ tab_responsaveis_aluno }}"><a href="">Responsáveis</a></li>
+          <li class="{{ tab_responsaveis_aluno }}"><a href="{% url 'membro_familia_form' aluno.id%}">Responsáveis</a></li>
       <li class="{{ tab_autorizados_aluno }}"><a href="{% url 'autorizados_aluno_list' escola.id aluno.id %}">Autorizados</a></li>
       <!--     <li class="{{ tab_usuarios }}"><a href="#" id='id_usuarios'>Boletim</a></li>
       <li class="{{ tab_classes }}"><a href="#" id='id_classes'>Faltas</a></li>
