--- a/escolar/escolas/templates/escolas/membro_familia_form.html
+++ b/escolar/escolas/templates/escolas/membro_familia_form.html
@@ -1,15 +1,14 @@
-
 {% extends "base.html" %}
 {% load bootstrap3 %}
 {% block extra_css %}
-    {{ endereco_form.media.css }}
+    {{ formset.media.css }}
 {% endblock extra_css %}
 {% block page_title %}
   <div class="page-header">
   <!-- TODO erver esse br -->
   <br>
-    {% if form.instance.id %}
-        Aluno: {{ form.instance.nome }}
+    {% if aluno %}
+        Aluno: {{ aluno.nome }}
     {% else %}
        Aluno
     {% endif %}
@@ -18,15 +17,35 @@
 
 {% block content %}
 <div class="container">
-  {% include "base_adm.html" %}
   <div class="row-fluid span10">
     {% include "base_aluno.html" %}
-    <form method="POST">
-      {{ form.errors }}
+    <form method="POST" enctype="multipart/form-data">
       {% csrf_token %}
-      <div class="form-group center_div" enctype="multipart/form-data">
+      <div class="form-group center_div" >
         <div class="row">
-
+          <!-- {# Celular, Tablet, Computador #} -->
+          <div class="col-xs-9 col-sm-6 col-md-3">
+            {% bootstrap_field form.parentesco %}
+            {% bootstrap_field form.nome %}
+            {% bootstrap_field form.nascimento %}
+            {% bootstrap_field form.responsavel_financeiro %}
+            {% bootstrap_field form.responsavel_pedagogico %}
+            {% bootstrap_field form.sexo %}
+          </div>
+          <div class="col-xs-9 col-sm-6 col-md-3">
+            {% bootstrap_field form.cpf %}
+            {% bootstrap_field form.rg %}
+            {% bootstrap_field form.email %}
+            {% bootstrap_field form.celular %}
+            {% bootstrap_field form.telefone %}
+          </div>
+          <div class="col-xs-9 col-sm-6 col-md-3">
+            {% bootstrap_field form.profissao %}
+            {% bootstrap_field form.empresa %}
+            {% bootstrap_field form.telefone_empresa %}
+            {% bootstrap_field form.obs_empresa %}
+            {% bootstrap_field form.documento %}
+          </div>
         </div>
       </div>
       <div class="form-actions">
@@ -50,5 +69,5 @@
 {% endblock content %}
 
 {% block extra_js %}
-    {{ form.media }}
+  {{ formset.media }}
 {% endblock extra_js %}
