--- a/escolar/core/templates/base_aluno.html
+++ b/escolar/core/templates/base_aluno.html
@@ -2,13 +2,14 @@
   {% if escola.id %}
     {% if aluno.pk %}
       <li class="{{ tab_aluno }}"><a href="{% url 'aluno_form' escola.pk aluno.pk %}" id='id_escola'>Ficha de Matrícula</a></li>
-          <li class="{{ tab_responsaveis_aluno }}"><a href="{% url 'membro_familia_form' aluno.id%}">Responsáveis</a></li>
+      <li class="{{ tab_responsaveis_aluno }}"><a href="{% url 'membros_familia_list' aluno.id %}">Responsáveis</a></li>
       <li class="{{ tab_autorizados_aluno }}"><a href="{% url 'autorizados_aluno_list' escola.id aluno.id %}">Autorizados</a></li>
       <!--     <li class="{{ tab_usuarios }}"><a href="#" id='id_usuarios'>Boletim</a></li>
-      <li class="{{ tab_classes }}"><a href="#" id='id_classes'>Faltas</a></li>
-      <li class="{{ tab_professores }}"><a href="#" id='id_professores'>Agenda</a></li> -->
-      <li class="{{ tab_professores }}"><a href="#" id='id_professores'>Contrato</a></li>
-      <li class="{{ tab_professores }}"><a href="#" id='id_professores'>Parcelas</a></li>
+      <li class=""><a href="#" id='id_classes'>Faltas</a></li>
+      <li class=""><a href="#" id='id_professores'>Agenda</a></li> -->
+      <li class=""><a href="#" id='id_professores'>Contrato</a></li>
+      <li class=""><a href="#" id='id_professores'>Parcelas</a></li>
+      <li class=""><a href="#" id='id_historico'>Histórico</a></li>
     {% else %}
       <li class="{{ tab_aluno }}"><a href="{% url 'aluno_form' escola.pk %}" id='id_escola'>Ficha de Matrícula</a></li>
       <li class="disabled"><a href="#" id='id_professores'>Contrato</a></li>
