--- a/escolar/escolas/templates/escolas/membro_familia_form.html
+++ b/escolar/escolas/templates/escolas/membro_familia_form.html
@@ -50,7 +50,7 @@
       </div>
       <div class="form-actions">
         <input type="submit" value="Salvar" class="btn btn-primary">
-        <a href="" class="btn btn-secondary">Cancelar</a>
+        <a href="{% url 'membros_familia_list' aluno.id %}" class="btn btn-secondary">Cancelar</a>
       </div>
     </form>
   </div>
