ref #35 listando pagamentos do contrato do Aluno, no sub menu de aluno, aba Pagamentos

--- a/escolar/core/templates/nav_gestor.html
+++ b/escolar/core/templates/nav_gestor.html
@@ -25,7 +25,7 @@
                 <li class="{{ tab_escola }}"><a href="{% url 'escola_cadastro' escola.pk %}" id='id_escola'>Instituição</a></li>
                 <li class="{{ tab_alunos }}"><a href="{% url 'alunos_list' escola.id %}" id='id_alunos'>Alunos</a></li>
                 <li class="{{ tab_contratos }}"><a href="{% url 'contratos_list' escola.id %}" id='contratos'>Contratos</a></li>
-                <li class="{{ tab_parcelas }}"><a href="{% url 'pagamentos_list' escola.id %}" id='id_movimentos'>Parcelas</a></li>
+                <li class="{{ tab_parcelas }}"><a href="{% url 'pagamentos_list' escola.id %}" id='id_movimentos'>Paagamentos</a></li>
                 <!-- <li class="{{ tab_responsaveis }}"><a href="{% url 'responsaveis_list' escola.id %}">Responsáveis</a></li> -->
                <!--  <li class="{{ tab_autorizados }}"><a href="{% url 'autorizados_list' escola.id %}">Autorizados</a></li> -->
             </li>
