--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -29,6 +29,7 @@
         {% bootstrap_field form.ano %}
         {% bootstrap_field form.mes %}
         {% bootstrap_field form.titulo %}
+        {% bootstrap_field form.efet %}
       </div>
       <button type="submit" class="btn btn-primary" title="Filtrar"><i class="glyphicon glyphicon-search"></i></button>
       <a class="btn btn-small btn-info" href="." title="Apagar o filtro e listar todos"><i class="glyphicon glyphicon-remove-circle"></i></a>
